# air-control

./: .gitignore  LICENSE  README.md  main.py  o.py  old_main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
old/air_control/: main.py  main2.py
old/air_control/camera/: camera_start.py
src/air_control/: main.py
src/air_control/keyboard/: keyboard_start.py
src/aircontrol/: __init__.py  app_context.py  main.py
src/aircontrol/actions/: __init__.py  camera_control.py  camera_screenshot_control.py  facetime_control.py  media_control.py  mouse_control.py  volume_control.py  window_control.py
src/aircontrol/camera/: __init__.py  camera.py
src/aircontrol/config/: gesture_map.yaml  gesture_priority.py  gesture_priority.yaml
src/aircontrol/cursor/: __init__.py  controller.py  index_mode.py  mapping.py  palm_mode.py  smoothing.py
src/aircontrol/gestures/: __init__.py  drag.py  (+9 more)
tests/config/: test_gesture_priority.py
tests/cursor/: test_controller.py
tests/gestures/: test_cursor_commands.py  test_dispatcher.py  test_engine.py  test_gesture_map.py  test_hand_landmarks.py  test_mapper.py  test_media_commands.py  test_ring_pinch_detector.py  test_scroll_continuous_command.py  test_two_finger_hold_detector.py
tests/integration/: test_gesture_map_coverage.py  test_gesture_system_flow.py  test_main_loop_smoke.py  test_priority_config_integration.py
youtube/: part_1.py  part_2.py
youtube/gestures_old/: volume_gesture.py
youtube/other/: camera_screenshot.py  facetime_me.py  pause_hold_old.py  pinch_click.py  two_finger_page_scroll.py
(+55 files in other folders)
