# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-control"
version = "0.1.0"
description = "Hand-gesture based laptop control using MediaPipe."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chamu Vmg" }]

dependencies = [
  "opencv-python>=4.8",
  "mediapipe>=0.10",
  "numpy>=1.21",
  "pyautogui>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
]

# CLI command: `aircontrol`
[project.scripts]
aircontrol = "aircontrol.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["aircontrol*"]

